examples/test/testpolicy2663.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2663
  namespace: namespace156
spec:
  podSelector:
    matchLabels:
      key34: value6
      key22: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value35
      podSelector:
        matchLabels:
          key13: value20
          key7: value1
          key30: value19
